Updated chrome to 4.12.0 in feature branch